* Fix z-index of demos navigation header

--- a/src/demo/css/app.scss
+++ b/src/demo/css/app.scss
@@ -100,6 +100,7 @@ h3 {
   top: 0;
   padding: 12px;
   height: 65px;
+  z-index: 2000;
   box-sizing: border-box;
   background-color: #404040;
   color: #ffffff;
